# easypost-python

./: .gitattributes  .gitignore  .isort.cfg  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  UPGRADE_GUIDE.md  VERSION  adjust_python_style_guide.sh  easypost.html  example.py  example_1_call.py  example_address_verify_failure.py  example_batch.py  example_carrier_account.py  example_carrier_account_types.py  example_order.py  example_pickup_batch.py  example_pickup_single_shipment.py  example_single_request.py  example_tracker.py  example_user.py  example_user_api_keys.py  justfile  pyproject.toml  requirements-tests.txt  search.js  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish_to_pypi.yml  release.yml  test.yaml  update_copyright.yml
docs/: easypost.html  index.html  search.js
docs/easypost/: address.html  batch.html  beta.html  billing.html  brand.html  carrier_account.html  constant.html  customs_info.html  customs_item.html  easypost_object.html  endshipper.html  error.html  event.html  insurance.html  order.html  parcel.html  payload.html  pickup.html  pickup_rate.html  postage_label.html  rate.html  referral.html  refund.html  report.html  requestor.html  resource.html  scanform.html  shipment.html  tax_identifier.html  tracker.html  user.html  util.html  version.html  webhook.html
easypost/: __init__.py  _info.py  _version.py  address.html  address.py  api_key.html  api_key.py  batch.html  batch.py  beta.html  billing.html  billing.py  brand.html  brand.py  carrier_account.html  carrier_account.py  constant.html  constant.py  credit_card.py  customs_info.html  customs_info.py  customs_item.html  customs_item.py  easypost_client.html  easypost_client.py  easypost_object.html  easypost_object.py  endshipper.html  endshipper.py  error.html  error.py  errors.html  event.html  event.py  hooks.html  http.py  importer.py  insurance.html  insurance.py  models.html  (+44 more)
easypost/beta/: __init__.py  carrier_metadata.html  carrier_metadata.py  rate.html  rate.py  referral.html  referral.py  referral_customer.html  referral_customer.py  user.py
easypost/errors/: __init__.py  api.html  general.html
easypost/hooks/: __init__.py  event_hook.html  event_hook.py  request_hook.html  request_hook.py  response_hook.html  response_hook.py
easypost/models/: __init__.py  address.html  (+78 more)
examples/: __init__.py  address.py  address_verify.py  address_verify_failure.py  address_verify_strict_failure.py  batch.py  carrier_account.py  carrier_account_types.py  event.py  example.py  example_1_call.py  example_single_request.py  order.py  pickup_batch.py  pickup_single_shipment.py  rating.py  report.py  shipment_retrieve_by_tracking_code.py  tracker.py  unicode.py  user.py  user_api_keys.py
scripts/: prep_release.sh
tests/: address.py  batch.py  conftest.py  constants.py  insurance.py  order.py  parcel.py  pickup.py  report.py  scan_form.py  shipment.py  test.sh  test_address.py  test_api_key.py  test_base_service.py  test_batch.py  test_beta_carrier_metadata.py  test_beta_rate.py  test_beta_referral.py  test_beta_referral_customer.py  test_beta_user.py  test_billing.py  test_carrier_account.py  test_carrier_metadata.py  test_carrier_type.py  test_claim.py  test_credit_card.py  test_customer_portal.py  test_customs_info.py  test_customs_item.py  test_easypost.py  test_easypost_client.py  test_embeddable.py  test_end_shipper.py  test_endshipper.py  test_error.py  test_event.py  test_fedex_registration.py  test_hook.py  test_insurance.py  (+20 more)
(+352 files in other folders)
