[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easypost"
description = "EasyPost Shipping API Client Library for Python"
version = "10.3.0"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "EasyPost", email = "support@easypost.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests >= 2.4.3"]
optional-dependencies = { dev = [
    "bandit == 1.8.*",
    "build == 1.2.*",
    "mypy == 1.15.*",
    "pdoc == 15.*",
    "pytest == 8.*",
    "pytest-cov == 6.*",
    "pytest-vcr == 1.*",
    "ruff == 0.14.*",
    "vcrpy == 7.*",
] }

[project.urls]
Docs = "https://docs.easypost.com"
Tracker = "https://github.com/EasyPost/easypost-python/issues"
Source = "https://github.com/EasyPost/easypost-python"

[tool.setuptools.packages.find]
exclude = ["docs", "examples", "tests"]

[tool.setuptools.package-data]
easypost = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
